--- a/src/Web/Pages/Basket/Checkout.cshtml
+++ b/src/Web/Pages/Basket/Checkout.cshtml
@@ -17,7 +17,7 @@
                         <input asp-for="UserAddress.UseUserAddress" class="form-check-input" type="radio" value="1" checked>
                         <label class="form-check-label" asp-for="UserAddress.UseUserAddress">
                             <strong>Na sua morada</strong>
-                        </label>
+                        </label>                        
                     </div>
                     <div class="form-group">
                         <label asp-for="UserAddress.Street"></label>
@@ -54,22 +54,24 @@
                             <strong>Levantar na loja</strong>
                         </label>
                     </div>
-                    <div class="form-group">
-                        <label>Morada</label>
-                        <div class="">
-                            <span>Mercado de Loulé, Praça da Republica, 8100-270 Loulé</span>
+                    <div id="store-location-controls" class="d-none d-sm-block">
+                        <div class="form-group">
+                            <label>Morada</label>
+                            <div class="">
+                                <span>Mercado de Loulé, Praça da Republica, 8100-270 Loulé</span>
+                            </div>
+                            <div>
+                                <span>Banca Nº 44 - <a href="http://saborcomtradicao.com/" target="_blank"> Sabor com Tradição </a></span>
+                            </div>
                         </div>
                         <div>
-                            <span>Banca Nº 44 - <a href="http://saborcomtradicao.com/" target="_blank"> Sabor com Tradição </a></span>
+                            <laebel>Mapa</laebel>
                         </div>
-                    </div>
-                    <div>
-                        <laebel>Mapa</laebel>
-                    </div>
-                    <div class="mt-3">
-                        <iframe width="100%" height="300"
-                                frameborder="0" style="border:0"
-                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB2Av0vyWQSV7OOZK_LdJ3i52TSC8pLPF8&q=Mercado+Municipal+de+Loulé+(Desde+1908)" allowfullscreen></iframe>
+                        <div class="mt-3">
+                            <iframe width="100%" height="300"
+                                    frameborder="0" style="border:0"
+                                    src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB2Av0vyWQSV7OOZK_LdJ3i52TSC8pLPF8&q=Mercado+Municipal+de+Loulé+(Desde+1908)" allowfullscreen></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
