--- a/src/Web/Pages/Basket/Result.cshtml
+++ b/src/Web/Pages/Basket/Result.cshtml
@@ -3,10 +3,18 @@
 @{
     ViewData["Title"] = "Result";
 }
-
 <h2>Sucesso</h2>
-<p>A sua encomenda foi criado com sucesso!</p>
-<p>Por favor consulte o seu email</p>
-<br />
-<p>Obrigado por escolher a Dama no Jornal</p>
+
+<div class="row">
+    <div class="col-sm-6">
+        <p>A sua encomenda foi criada com sucesso!</p>
+        <p>Para concluir consulte o seu email.</p>
+        <br />
+        <p>Obrigado por escolher a Dama no Jornal!</p>
+    </div>
+    <div class="col-sm-6">
+        <img src="http://via.placeholder.com/300x500" alt="Dama no Jornal"
+    </div>
+</div>
+
 
