big attribute calculation changes

--- a/src/Web/Pages/Product/_productDetail.cshtml
+++ b/src/Web/Pages/Product/_productDetail.cshtml
@@ -4,7 +4,7 @@
     <div class="dama-product-title">@Model.ProductTitle</div>
     <div class="row justify-content-center mt-1 mt-md-3">
         <div class="dama-product-price">
-            <span>@Model.ProductBasePrice</span>
+            <span>@Model.ProductTotalPrice</span>
         </div>
         @*<div class="my-auto pl-1 pr-1">&#8211;</div>
             <div class="dama-product-price">
