--- a/src/Backoffice/Pages/Products/Create.cshtml
+++ b/src/Backoffice/Pages/Products/Create.cshtml
@@ -67,7 +67,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    @*<div class="row">
         <div class="col-md-8">
             <hr />
             <h4>Atributos do Produto</h4>
@@ -131,12 +131,13 @@
                     </tr>
                 </tfoot>
             </table>
-            <div class="form-group">
-                <input type="submit" asp-page-handler="Save" value="Criar" class="btn btn-primary" />
-            </div>
+
 
         </div>
 
+    </div>*@
+    <div class="form-group">
+        <input type="submit" asp-page-handler="Save" value="Criar" class="btn btn-primary" />
     </div>
 </form>
 
