--- a/src/Backoffice/Pages/Products/Edit.cshtml
+++ b/src/Backoffice/Pages/Products/Edit.cshtml
@@ -13,7 +13,7 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input asp-for="ProductModel.Sku" type="hidden" />
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="ProductModel.Name" class="control-label"></label>
                 <input asp-for="ProductModel.Name" class="form-control" />
@@ -63,6 +63,62 @@
                 <input type="hidden" asp-for="ProductModel.PictureUri" />
             </div>
         </div>
+        <div class="col-md-6">
+            <h4>Atributos do Produto</h4>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Type)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Name)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Price)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].ReferenceCatalogItem)
+                        </th>
+                        <th>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Model.ProductModel?.CatalogAttributes?.Count > 0)
+                    {
+                        for (int i = 0; i < Model.ProductModel.CatalogAttributes.Count; i++)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(model => Model.ProductModel.CatalogAttributes[i].Type)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(model => Model.ProductModel.CatalogAttributes[i].Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(model => Model.ProductModel.CatalogAttributes[i].Price)
+                                </td>
+                                <td>
+                                    <a asp-page="/Products/Edit" asp-route-id="@Model.ProductModel.CatalogAttributes[i].ReferenceCatalogItemId"> @Html.DisplayFor(modelItem => Model.ProductModel.CatalogAttributes[i].ReferenceCatalogItem.Name) </a>
+                                </td>
+                                <td>
+                                    <a asp-page="./Attributes/Edit" asp-route-id="@Model.ProductModel.CatalogAttributes[i].Id" onclick="return confirm('A menina gravou?');">Editar</a> |
+                                    <a asp-page="./Attributes/Delete" asp-route-id="@Model.ProductModel.CatalogAttributes[i].Id" onclick="return confirm('A menina gravou?');">Apagar</a>
+                                </td>
+                            </tr>
+                        }
+                    }
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="6">
+                            <a asp-page="./Attributes/Create" asp-route-id="@Model.ProductModel.Id" class="btn btn-default" onclick="return confirm('A menina gravou?');">Novo Produto</a>
+                        </td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-12">
@@ -106,74 +162,9 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8">
-            <hr />
-            <h4>Atributos do Produto</h4>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Type)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Code)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Name)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Price)
-                        </th>
-                        <th>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @if (Model.ProductModel?.CatalogAttributes?.Count > 0)
-                    {
-                        for (int i = 0; i < Model.ProductModel.CatalogAttributes.Count; i++)
-                        {
-                            <tr>
-                                <td>
-                                    <input type="hidden" asp-for="ProductModel.CatalogAttributes[i].Id" />
-                                    <input type="hidden" asp-for="ProductModel.CatalogAttributes[i].CatalogItemId" />
-                                    <input type="hidden" asp-for="ProductModel.CatalogAttributes[i].ToRemove" class="to-remove" />
-                                    @*<input type="hidden" asp-for="ProductModel.CatalogAttributes[i].Type" value="@Model.ProductModel.CatalogAttributes[i].Type" />*@
-                                    <select asp-for="ProductModel.CatalogAttributes[i].Type" asp-items="Html.GetEnumSelectList<ApplicationCore.Entities.CatalogAttributeType>()" class="form-control"></select>
-                                    <span asp-validation-for="ProductModel.CatalogAttributes[i].Type" class="text-danger"></span>
-                                </td>
-                                <td>
-                                    <input asp-for="ProductModel.CatalogAttributes[i].Code" class="form-control" value="@Model.ProductModel.CatalogAttributes[i].Code" />
-                                    <span asp-validation-for="ProductModel.CatalogAttributes[i].Code" class="text-danger"></span>
-                                </td>
-                                <td>
-                                    <input asp-for="ProductModel.CatalogAttributes[i].Name" class="form-control" value="@Model.ProductModel.CatalogAttributes[i].Name" />
-                                    <span asp-validation-for="ProductModel.CatalogAttributes[i].Name" class="text-danger"></span>
-                                </td>
-                                <td>
-                                    <input asp-for="ProductModel.CatalogAttributes[i].Price" class="form-control decimal" value="@Model.ProductModel.CatalogAttributes[i].Price" />
-                                    <span asp-validation-for="ProductModel.CatalogAttributes[i].Price" class="text-danger"></span>
-                                </td>
-                                <td>
-                                    <button type="button" class="btn btn-danger remove">Remover</button>
-                                </td>
-                            </tr>
-                        }
-                    }
-
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td colspan="4">
-                            <input type="submit" asp-page-handler="AddAttribute" value="Adicionar Atributo" class="btn btn-default" />
-                        </td>
-                    </tr>
-                </tfoot>
-            </table>
-            <div class="form-group">
-                <input type="hidden" asp-for="ProductModel.Id" />
-                <input type="submit" asp-page-handler="Save" value="Gravar" class="btn btn-primary" />
-            </div>
+        <div class="form-group">
+            <input type="hidden" asp-for="ProductModel.Id" />
+            <input type="submit" asp-page-handler="Save" value="Gravar" class="btn btn-primary" />
         </div>
     </div>
 
