--- a/src/Web/Pages/Product/Index.cshtml
+++ b/src/Web/Pages/Product/Index.cshtml
@@ -88,18 +88,34 @@
                     $('#ProductQuantity').val(1);
             });
             $('.atribute-items').on('change', function () {
-                var attrId = $(this).val();
+                var attr = $(this).val();
+                var productBase = parseFloat('@Model.ProductModel.ProductBasePrice'.replace(',', '.'));
+                $('.dama-product-price span').text(toNumber(productBase));
+                var newprice = productBase;
+                $('.atribute-items').each(function () {
+                    var attrValue = $(this).val();
+                    if (attrValue != -1) {
+                        $.getJSON("/Product?handler=attributedetails", { id: attrValue })
+                            .done(function (data) {
+                                if (attr == attrValue && data.sku) {
+                                    //Redirect
+                                    var url = '@Url.Page("/Product/Index", new { id = "SKU" })';
+                                    url = url.replace('SKU', data.sku);
+                                    window.location.href = url;
+                                }
+                                if (data.price) {
+                                    newprice += parseFloat(data.price);                                    
+                                    $('.dama-product-price span').text(toNumber(newprice));
+                                }
+                            })
+                            .fail(function (jqxhr, textStatus, error) {
+                                var err = textStatus + ", " + error;
+                                console.log("Request Failed: " + err);
+                            });
+                    }
+                    
 
-                $.getJSON("/Product?handler=attributeprice", { id: attrId })
-                    .done(function (data) {
-                        if (data) {
-                            $('.dama-product-price span').text(toNumber(data));
-                        }
-                    })
-                    .fail(function (jqxhr, textStatus, error) {
-                        var err = textStatus + ", " + error;
-                        console.log("Request Failed: " + err);
-                    });
+                });                
             });
         });
     </script>
