--- a/src/Backoffice/Pages/Products/Details.cshtml
+++ b/src/Backoffice/Pages/Products/Details.cshtml
@@ -107,10 +107,7 @@
                     <tr>
                         <th>
                             @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Type)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Code)
-                        </th>
+                        </th>                       
                         <th>
                             @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Name)
                         </th>
@@ -118,7 +115,7 @@
                             @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Price)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Sku)
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].ReferenceCatalogItem)
                         </th>
                     </tr>
                 </thead>
@@ -132,16 +129,13 @@
                                     @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Type)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Code)
-                                </td>
-                                <td>
                                     @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Name)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Price)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Sku)
+                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].ReferenceCatalogItem.Name)
                                 </td>
                             </tr>
                         }
