--- a/src/Web/Pages/Product/Index.cshtml
+++ b/src/Web/Pages/Product/Index.cshtml
@@ -95,7 +95,9 @@
                 $('.atribute-items').each(function () {
                     var attrValue = $(this).val();
                     if (attrValue != -1) {
-                        $.getJSON("/Product?handler=attributedetails", { id: attrValue })
+                        var handlerUrl = '@Url.Page("/Product/Index", "attributedetails", new { id = "ATTRVALUE" })';
+                        handlerUrl = handlerUrl.replace('ATTRVALUE', attrValue);
+                        $.getJSON(handlerUrl)
                             .done(function (data) {
                                 if (attr == attrValue && data.sku) {
                                     //Redirect
