--- a/src/Web/Pages/Basket/Result.cshtml
+++ b/src/Web/Pages/Basket/Result.cshtml
@@ -13,7 +13,7 @@
         <p>Obrigado por escolher a Dama no Jornal!</p>
     </div>
     <div class="col-sm-6">
-        <img src="http://via.placeholder.com/300x500" alt="Dama no Jornal"
+        <img src="http://via.placeholder.com/300x500" alt="Dama no Jornal" />
     </div>
 </div>
 
