--- a/src/Web/Pages/_product.cshtml
+++ b/src/Web/Pages/_product.cshtml
@@ -4,7 +4,7 @@
 <form asp-page="/Basket/Index" method="post">
 
     <a asp-page="/Product/Index" asp-route-id="@Model.ProductSku"><img class="esh-catalog-thumbnail" src="@Model.PictureUri" /></a>
-    <input class="esh-catalog-button" type="submit" value="[ ADD TO BASKET ]" />
+    <input class="esh-catalog-button" type="submit" value="[ ADICIONAR ]" />
 
     <div class="esh-catalog-name">
         <span>@Model.CatalogItemName</span>
