--- a/src/Web/Pages/Order/Detail.cshtml
+++ b/src/Web/Pages/Order/Detail.cshtml
@@ -1,77 +1,105 @@
 ﻿@page
+@using Web.Extensions;
 @model DetailModel
 @{
-    ViewData["Title"] = "My Order History";
+    ViewData["Title"] = "As Minhas Encomendas";
 }
 @{
-    ViewData["Title"] = "Order Detail";
+    ViewData["Title"] = "Detalhe da Encomenda";
 }
 
 <div class="esh-orders_detail">
     <div class="container">
         <section class="esh-orders_detail-section">
             <article class="esh-orders_detail-titles row">
-                <section class="esh-orders_detail-title col-xs-3">Order number</section>
-                <section class="esh-orders_detail-title col-xs-3">Date</section>
-                <section class="esh-orders_detail-title col-xs-3">Total</section>
-                <section class="esh-orders_detail-title col-xs-3">Status</section>
+                <section class="esh-orders_detail-title col-3">Nº Encomenda</section>
+                <section class="esh-orders_detail-title col-3">Data</section>
+                <section class="esh-orders_detail-title col-3">Total</section>
+                <section class="esh-orders_detail-title col-3">Estado</section>
             </article>
 
             <article class="esh-orders_detail-items row">
-                <section class="esh-orders_detail-item col-xs-3">@Model.OrderDetails.OrderNumber</section>
-                <section class="esh-orders_detail-item col-xs-3">@Model.OrderDetails.OrderDate</section>
-                <section class="esh-orders_detail-item col-xs-3">$@Model.OrderDetails.Total</section>
-                <section class="esh-orders_detail-title col-xs-3">@Model.OrderDetails.Status</section>
+                <section class="esh-orders_detail-item col-3">@Model.OrderDetails.OrderNumber</section>
+                <section class="esh-orders_detail-item col-3">@Model.OrderDetails.OrderDate</section>
+                <section class="esh-orders_detail-item col-3">$@Model.OrderDetails.Total</section>
+                <section class="esh-orders_detail-title col-3">@Model.OrderDetails.Status</section>
             </article>
         </section>
 
         @*<section class="esh-orders_detail-section">
-            <article class="esh-orders_detail-titles row">
-                <section class="esh-orders_detail-title col-xs-12">Description</section>
-            </article>
+                <article class="esh-orders_detail-titles row">
+                    <section class="esh-orders_detail-title col-xs-12">Description</section>
+                </article>
 
-            <article class="esh-orders_detail-items row">
-                <section class="esh-orders_detail-item col-xs-12">@Model.Description</section>
-            </article>
-        </section>*@
+                <article class="esh-orders_detail-items row">
+                    <section class="esh-orders_detail-item col-xs-12">@Model.Description</section>
+                </article>
+            </section>*@
 
         <section class="esh-orders_detail-section">
             <article class="esh-orders_detail-titles row">
-                <section class="esh-orders_detail-title col-xs-12">Shipping Address</section>
+                <section class="esh-orders_detail-title col-12">Morada de Entrega</section>
             </article>
 
             <article class="esh-orders_detail-items row">
-                <section class="esh-orders_detail-item col-xs-12">@Model.OrderDetails.ShippingAddress.Street</section>
+                <section class="esh-orders_detail-item col-12">@Model.OrderDetails.ShippingAddress.Street</section>
             </article>
 
             <article class="esh-orders_detail-items row">
-                <section class="esh-orders_detail-item col-xs-12">@Model.OrderDetails.ShippingAddress.City</section>
+                <section class="esh-orders_detail-item col-12">@Model.OrderDetails.ShippingAddress.City</section>
             </article>
 
             <article class="esh-orders_detail-items row">
-                <section class="esh-orders_detail-item col-xs-12">@Model.OrderDetails.ShippingAddress.Country</section>
+                <section class="esh-orders_detail-item col-12">@Model.OrderDetails.ShippingAddress.Country</section>
             </article>
         </section>
 
         <section class="esh-orders_detail-section">
             <article class="esh-orders_detail-titles row">
-                <section class="esh-orders_detail-title col-xs-12">ORDER DETAILS</section>
+                <section class="esh-orders_detail-title col-12">DETALHE DA ENCOMENDA</section>
             </article>
 
             @for (int i = 0; i < Model.OrderDetails.OrderItems.Count; i++)
             {
                 var item = Model.OrderDetails.OrderItems[i];
                 <article class="esh-orders_detail-items esh-orders_detail-items--border row">
-                    <section class="esh-orders_detail-item col-md-4 hidden-md-down">
+                    <section class="esh-orders_detail-item col-sm-4 hidden-md-down">
                         <img class="esh-orders_detail-image" src="@item.PictureUrl">
                     </section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-xs-4">@item.ProductName</section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-xs-1">$ @item.UnitPrice.ToString("N2")</section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-xs-1">@item.Units</section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-xs-2">$ @Math.Round(item.Units * item.UnitPrice, 2).ToString("N2")</section>
+                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-4">
+                        @item.ProductName
+                        @if (item.Attributes?.Count > 0)
+                        {
+                            <br />
+                            foreach (var attr in item.Attributes)
+                            {
+                                <span class="dama-basket-label">@(EnumHelper<ApplicationCore.Entities.CatalogAttributeType>.GetDisplayValue(attr.Type)): @attr.AttributeName </span>
+                            }
+
+                        }
+                    </section>
+                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-1">€ @item.UnitPrice.ToString("N2")</section>
+                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-1">@item.Units</section>
+                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-2">€ @Math.Round(item.Units * item.UnitPrice, 2).ToString("N2")</section>
                 </article>
             }
         </section>
+
+        @if (Model.OrderDetails.ShippingCost > 0)
+        {
+            <section class="esh-orders_detail-section esh-orders_detail-section--right">
+                <article class="esh-orders_detail-titles esh-basket-titles--clean row">
+                    <section class="esh-orders_detail-title col-xs-9"></section>
+                    <section class="esh-orders_detail-title col-xs-2">Portes</section>
+                </article>
+
+                <article class="esh-orders_detail-items row">
+                    <section class="esh-orders_detail-item col-xs-9"></section>
+                    <section class="esh-orders_detail-item esh-orders_detail-item--mark col-xs-2">€ @Model.OrderDetails.ShippingCost</section>
+                </article>
+            </section>
+
+        }
 
         <section class="esh-orders_detail-section esh-orders_detail-section--right">
             <article class="esh-orders_detail-titles esh-basket-titles--clean row">
@@ -81,7 +109,7 @@
 
             <article class="esh-orders_detail-items row">
                 <section class="esh-orders_detail-item col-xs-9"></section>
-                <section class="esh-orders_detail-item esh-orders_detail-item--mark col-xs-2">$ @Model.OrderDetails.Total</section>
+                <section class="esh-orders_detail-item esh-orders_detail-item--mark col-xs-2">€ @Model.OrderDetails.Total</section>
             </article>
         </section>
     </div>
