--- a/src/Web/Pages/Account/Signin.cshtml
+++ b/src/Web/Pages/Account/Signin.cshtml
@@ -13,7 +13,7 @@
             <section>
                 <form asp-route-returnurl="@ViewData["ReturnUrl"]" asp-page-handler="SignIn" method="post" class="form-horizontal">
                     <h4>Já se registou?</h4>
-                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="LoginDetails.Email" class="control-label form-label"></label>
                         <input asp-for="LoginDetails.Email" class="form-control form-input form-input-center" />
@@ -43,26 +43,47 @@
             <section>
                 <h4>Registe-se!</h4>
                 <form asp-route-returnurl="@ViewData["ReturnUrl"]" asp-page-handler="Register" method="post" class="form-horizontal">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-group">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group required">
                         <label asp-for="UserDetails.Email" class="col-md-2 control-label"></label>
                         <div class="col-md-10">
                             <input asp-for="UserDetails.Email" class="form-control" />
                             <span asp-validation-for="UserDetails.Email" class="text-danger"></span>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group required">
                         <label asp-for="UserDetails.Password" class="col-md-2 control-label"></label>
                         <div class="col-md-10">
                             <input asp-for="UserDetails.Password" class="form-control" />
                             <span asp-validation-for="UserDetails.Password" class="text-danger"></span>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group required">
                         <label asp-for="UserDetails.ConfirmPassword" class="col-md-6"></label>
                         <div class="col-md-10">
                             <input asp-for="UserDetails.ConfirmPassword" class="form-control" />
                             <span asp-validation-for="UserDetails.ConfirmPassword" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserDetails.FirstName" class="col-md-6"></label>
+                        <div class="col-md-10">
+                            <input asp-for="UserDetails.FirstName" class="form-control" />
+                            <span asp-validation-for="UserDetails.FirstName" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserDetails.LastName" class="col-md-6"></label>
+                        <div class="col-md-10">
+                            <input asp-for="UserDetails.LastName" class="form-control" />
+                            <span asp-validation-for="UserDetails.LastName" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserDetails.PhoneNumber" class="col-md-6"></label>
+                        <div class="col-md-10">
+                            <input asp-for="UserDetails.PhoneNumber" class="form-control" />
+                            <span asp-validation-for="UserDetails.PhoneNumber" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group col-6">
