--- a/src/Web/Pages/Basket/Index.cshtml
+++ b/src/Web/Pages/Basket/Index.cshtml
@@ -78,7 +78,7 @@
                 <a asp-page="/Index" class="dama-basket-link">Adicionar mais produtos</a>
             </div>
             <div class="col text-right esh-basket-item--mark">
-                <span>Total </span>€ @Model.BasketModel.Total()
+                <span>Total </span>€ @Model.BasketModel.SubTotal()
             </div>
         </div>
         <div class="row justify-content-between ml-0 mr-0">
