--- a/src/Web/Pages/_Layout.cshtml
+++ b/src/Web/Pages/_Layout.cshtml
@@ -28,11 +28,11 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark top-nav pt-0 pb-0 pl-5 pr-5 d-none d-sm-flex">
+    <nav class="navbar navbar-expand-md navbar-dark top-nav pt-0 pb-0 pl-5 pr-5 d-none d-sm-flex pt-sm-3">
         <a href="https://www.damanojornal.com" class="navbar-brand">
-            <img src="~/images/brand_full.png" width="120" alt="Dama no Jornal" />
+            <img src="~/images/brand_full.png" width="150" alt="Dama no Jornal" />
         </a>
-        <form class="form-inline my-2 my-lg-0">
+        <form class="form-inline my-2 my-lg-0 search-text">
             <input class="bg-transparent border-left-0 border-right-0 border-top-0 border-light" autocomplete="off" type="search" placeholder="Procurar" aria-label="Search">
         </form>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar7">
